Move Contended related code to ContendedUtils